[gd_scene load_steps=2 format=3 uid="uid://c0qitrfn5jb8"]

[ext_resource type="Script" uid="uid://bwdq22xkt6b1e" path="res://scenes/nodes/Stage2D.gd" id="1_f3akv"]

[node name="LuaScriptStage" type="Node2D"]
script = ExtResource("1_f3akv")
metadata/_custom_type_script = "uid://bwdq22xkt6b1e"

[node name="djPos" type="Sprite2D" parent="."]
scale = Vector2(0.9, 0.9)

[node name="playerPos" type="Sprite2D" parent="."]
scale = Vector2(0.9, 0.9)

[node name="opponentPos" type="Sprite2D" parent="."]
scale = Vector2(0.9, 0.9)
